# save-steward

./: .gitignore  Makefile  README.md  RELEASE-BUILD-DOCS.md  package-lock.json  package.json
.github/workflows/: build-release.yml
docs/: encrypted-database-strategy.md  game-identification-strategy.md  git-implementation.md  logger-implementation.md  ludusavi-manifest-integration.md  pcgw_api_usage.md  save-location-detection-system.md
docs copy/: database-schema.md  hash-based-change-detection.md  ludusavi-manifest-integration.md
src/: AddGameModal.tsx  App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: game_manager.rs  git.rs  launch_utils.rs  lib.rs  main.rs
src-tauri/src/auto_backup/: integration.rs  manager.rs  mod.rs  monitor.rs  retention.rs
src-tauri/src/commands/: game.rs  git.rs  mod.rs  system.rs
src-tauri/src/database/: connection.rs  mod.rs  models.rs  schema.rs
src-tauri/src/detection/: confidence_scorer.rs  engine.rs  executable_analysis.rs  mod.rs  platform.rs  process_monitor.rs  runtime_detection.rs
src-tauri/src/game_manager/: detection.rs  pcgw.rs  persistence.rs  utils.rs
src-tauri/src/git_manager/: branching.rs  cloud.rs  history.rs  mod.rs  repository.rs  types.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/manifest/: cache.rs  downloader.rs  mod.rs  parser.rs  placeholder.rs  resolver.rs
src-tauri/src/pcgaming_wiki/: cache.rs  client.rs  mod.rs  models.rs  query_builder.rs  save_location_parser.rs
src-tauri/tests/: git_branching_tests.rs  git_history_tests.rs  git_repository_tests.rs
(+6 files in other folders)
