[package]
name = "save-steward"
version = "0.1.0"
description = "A Tauri App"
authors = ["Clifford Otieno"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "save_steward_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = "0.13"
argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
notify = "6.1"
walkdir = "2"
regex = "1"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures = "0.3"
rayon = "1.10"
base64 = "0.22"
hex = "0.4"
sysinfo = "0.32"
rand = "0.8"
home = "0.5"
platform-dirs = "0.3"
mime_guess = "2.0"
pe-parser = "0.3"
tempfile = "3.0"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }
